include/stat.h

long asc  (const long *, long); /* ascents */
long des  (const long *, long); /* descents */
long exc  (const long *, long); /* excedances */
long fp   (const long *, long); /* fixed points */
long cyc  (const long *, long); /* The number of cycles */
long inv  (const long *, long); /* inversions */
long maj  (const long *, long); /* major index */
long comaj(const long *, long); /* co-major index */
long peak (const long *, long); /* peaks */
long vall (const long *, long); /* valleys */
long dasc (const long *, long); /* double ascents */
long ddes (const long *, long); /* double descents */
long lmin (const long *, long); /* left-to-right minima */
long lmax (const long *, long); /* left-to-right maxima */
long lir  (const long *, long); /* left-most increasing run */
long ldr  (const long *, long); /* left-most decreasing run */
long comp (const long *, long); /* components */
long ep   (const long *, long); /* rank a la Elizalde & Pak */
long dim  (const long *, long); /* dimension */
long asc0 (const long *, long); /* small ascents */
long des0 (const long *, long); /* small descents */

long lmin_values  (long *, const long *, long); /* values of left-to-right minima */
long lmin_indices (long *, const long *, long); /* indices of left-to-right minima */